neo4j/nodeport-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-http
  namespace: neo4j
spec:
  type: NodePort
  selector:
    app: my-neo4j
    helm.neo4j.com/instance: my-neo4j-release
  ports:
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
      nodePort: 30474
